# omnipath-utils

./: .bumpversion.cfg  .coveragerc  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-testing-unit.yml
about/: index.html
deploy/systemd/: omnipath-utils.service  omnipath-utils@.service
deployment/database/: index.html
deployment/server/: index.html
deployment/systemd/: index.html
docs/: about.md  index.md  installation.md  quickstart.md
docs/community/: contribute-codebase.md  contribute-docs.md  contribute.md  index.md
docs/deployment/: database.md  server.md  systemd.md
docs/guide/: mapping-advanced.md  mapping.md  reflists.md  taxonomy.md
docs/reference/source/omnipath_utils/: _metadata-docs.md
guide/mapping/: index.html
guide/mapping-advanced/: index.html
guide/reflists/: index.html
guide/taxonomy/: index.html
installation/: index.html
omnipath_utils/: __init__.py  _constants.py  _metadata.py  _session.py
omnipath_utils/cli/: _build.py  _export_resolver.py  _main.py  _serve.py
omnipath_utils/data/: id_types.yaml  organisms.yaml  resolver_policy.yaml
omnipath_utils/db/: _build.py  _connection.py  _loader.py  _presets.py  _query.py  _resolver_export.py  _schema.py
omnipath_utils/db/sql/: resolver_chemical.sql  resolver_combined.sql  resolver_gene_curated.sql  resolver_gene_ftp.sql  resolver_global.sql  resolver_protein.sql
omnipath_utils/mapping/: __init__.py  _cleanup.py  _id_types.py  _mapper.py  _reader.py  _special.py  _table.py  _translate.py
omnipath_utils/mapping/backends/: __init__.py  _base.py  _bigg.py  _biomart.py  _chebi.py  _chembl.py  _hmdb.py  _inputs_v2_adapter.py  _kegg_compound.py  _lipidmaps.py  _metanetx.py  _mirbase.py  _pubchem.py  _ramp.py  _swisslipids.py  _unichem.py  _uniprot.py  _uniprot_ftp.py  _uploadlists.py
omnipath_utils/orthology/: __init__.py  _manager.py
omnipath_utils/reflists/: __init__.py  _manager.py
omnipath_utils/server/: _app.py  _routes_mapping.py  _routes_orthology.py  _routes_reflists.py  _routes_taxonomy.py
omnipath_utils/taxonomy/: __init__.py  _taxonomy.py
quickstart/: index.html
search/: search_index.json
tests/: conftest.py  test_api_params.py  test_biomart_division.py  test_chem_backends.py  test_cumulative_idempotency.py  test_curie_handling.py  test_db.py  test_ftp_fallback_gate.py  test_full_uniprot.py  test_id_types.py  test_kegg_compound.py  test_loader.py  test_long_copy_helper.py  test_mapping.py  test_mapping_api_contract.py  test_metanetx_bigg.py  test_name_coverage.py  test_name_to_chebi.py  test_orthology.py  test_presets.py  test_query_routing.py  test_recovery_ensembl_and_gate.py  test_recovery_gene_history.py  test_recovery_uniprot.py  test_reflists.py  test_schema_long_table.py  test_scope.py  test_server.py  test_structure_mappings.py  test_taxonomy.py  test_translate_core.py
